--- a/static/index.html
+++ b/static/index.html
@@ -3,12 +3,14 @@
   <head>
     <title>Tesco</title>
     <link rel="shortcut icon" href="favicon.png" />
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.9/es5-shim.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.9/es5-sham.min.js"></script>
   </head>
   <body>
     <div id="app" style='height:100%;width:100%;'></div>
-    <script src="/static/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
